<resources>
    <string name="app_name">News Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_news">Popular News</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="visit_site">Visit site</string>
    <string name="no_favourites_yes">No favourites yes</string>
    <string name="make_sure_you_have_added_event_s_in_this_section">Make sure you have added event\'s in this section</string>
    <string name="favourites">Favourites</string>
    <string name="enter_key_word">Enter key word!</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cansel</string>
    <string name="error">Error</string>
    <string name="connection_problems">Connection problems</string>
    <string name="connection_icon">connection_icon</string>
    <string name="download_failed_check_your_internet_connection">Download failed. Check your internet connection.</string>
    <string name="update_connection">Update connection</string>
    <string name="header_image">Header image</string>
    <string name="icon_back">icon back</string>
    <string name="icon_share">icon share</string>
    <string name="icon_favourite">icon favourite</string>
    <string name="favourite_image">favourite image</string>
    <string name="article_image">article image</string>
    <string name="settings">Settings</string>
    <string name="night_mode">night mode</string>
    <string name="explore">Explore</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="email_required">Email is required!</string>
    <string name="password_required">Password is empty!</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete account</string>
    <string name="enter_your_email">Enter your email!</string>
    <string name="enter_your_password">Enter your password!</string>
    <string name="server_client_id">762714654374-ol09go9jmkmmjv10trasr9bvnll93c0e.apps.googleusercontent.com</string>
    <string name="change_email">Change email</string>
    <string name="enter_new_email">Enter new email!</string>
    <string name="dark_light_themes">Dark/Light themes</string>
    <string name="account_management">Account management</string>

</resources>