<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favourie.FavouriteFragment">

    <ImageView
        android:id="@+id/favourite_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/favourite_image"
        android:src="@drawable/ic_favorite_image_24"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/favourite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourite_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/no_favourites_yes"
        android:textColor="@color/grey_black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite_image" />

    <TextView
        android:id="@+id/favourite_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourite_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/make_sure_you_have_added_event_s_in_this_section"
        android:textColor="@color/grey_black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favourite_title" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_favourite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="120dp"
        android:visibility="invisible"
        tools:itemCount="2"
        tools:listitem="@layout/item_article" />

</RelativeLayout>