<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingFragment">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/grey_black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/line_image"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/setting_title"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="16dp"
        android:src="@color/black" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_email"
        android:layout_below="@id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:src="@drawable/profile_image" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/line_image"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/grey_black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Dima" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/setting_recycler"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/grey_black"
        android:textSize="20sp"
        tools:text="dimazharikg@gmail.com" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/setting_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        tools:itemCount="2"
        tools:listitem="@layout/item_setting" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/change_email_button"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/button_stroke"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/change_email"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sign_out_button"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_stroke"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_account_button"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_stroke"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="10dp"

            android:text="@string/delete_account"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>